--- a/webfatale.css
+++ b/webfatale.css
@@ -348,8 +348,13 @@ ul.toc-facts {
 }
 .vip {
   margin: 72px;
-  min-height: 500px;
+  padding-top: 72px;
+  padding-bottom: 72px;
   border: 3px solid #D61D7D;
+}
+.vip p {
+  text-align: center;
+  margin: 0 auto;
 }
 .vip-links {
   max-width: 600px;
